1.2
	- accept hexadecimal window ids, as does everybody else(?).
        - made it compile with ansi-89-based compilers again.

1.1  Thu Apr  8 21:59:35 CEST 2004
        - make it work with virtual root windows (again).
	- added options:
	    * -justify: gives a smooth right-hand margin
	    * -cont-color: allows the continuation marker to be a
	      different color than the logfile text
	- changed the code around quite a lot - it no longer
	  continually deletes lines and re-adds them, and the main
	  structure is now a linked list rather than an array.  the
	  continuation marker is added at display time, rather than
	  being in the strings of the datastructure.
	- it is now possible to specify a different font for each
	  logfile; use the -fn option between filenames.
        - fix very minor memleak.

1.0   Fri Apr  2 03:37:56 CEST 2004
	- fix a bug regarding long (>1023 bytes) lines.
        - c89 compatibility fixes by Seth W. Klein.
        - fix a memleak.

0.95  Thu Apr  1 00:39:08 CEST 2004
        - -geometry now expects _pixels_ not _characters_.
        - sped up redraws considerably (depending on xserver).
        - i18n: locale settings for multibyte characters are respected.
        - proportional fonts are supported now.
	- supports options as --long options now.
	- force initial call to redraw().
	- added options:
	    * -whole : to only display lines once they are \n terminated
	    * -partial: to display lines whether they are terminated or not
	    * -update: to attempt to complete old partial lines 'in-place'
	    * -cont: to specify a string to prefix 'broken' partial lines with
            * -outline: black outline (relatively slow).
            * -noflicker: slower but flickerfree update.
	    * -wordwrap: wrap at spaces to avoid breaking words
	- document default interval of 2.4 seconds.
	- set default 'reload' value to 0 to prevent reloads.
	- updated man page.
	- strict-aliasing fix suggested by mmj.