@@ -3,3 +3,22 @@ Backup
 man1
 root-tail
 root-tail.1.gz
+1.35.c
+1.36.c
+1.37.c
+1.38.c
+1.39.c
+1.44.c
+buffers.c
+issues.txt
+root-tail-cvs.c
+root-tail-debug-justify-malloc.c
+root-tail-ip-progress.c
+root-tail-justify.c
+root-tail-justify2.c
+root-tail-multi-font-almost-right.c
+root-tail-stable.c
+root-tail.c.debug
+root-tail.doc
+root-tail.sodi
+test.c
